// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > core > hocs > withTheme should inject a single property with the context into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"theme":{},"someProp":true}
</pre>
`;

exports[`engage > core > hocs > withTheme should inject the context properties into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"someProp":true}
</pre>
`;
